--- a/app/src/main/res/layout/data_list_item.xml
+++ b/app/src/main/res/layout/data_list_item.xml
@@ -28,7 +28,8 @@
             android:text="14"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
+            android:maxLines="1"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -36,7 +37,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:text="Title"
-            android:id="@+id/title"/>
+            android:id="@+id/title"
+            android:gravity="center_horizontal" />
 
         <TextView
             android:layout_width="250dp"
