--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,14 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+
+<!--    colors sber main-->
+    <color name="colorSberAgree">#08A652</color>
     <color name="black">#000000</color>
+    <color name="fillButton">#14000000</color>
+    <color name="colorHint">#8C000000</color>
+    <color name="colorDivider">#F0F0F0</color>
+    <color name="colorError">#F6650A</color>
+
 </resources>
