--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".mvvm.view.activities.MainActivity">
 
     <Button
+        android:visibility="gone"
         android:id="@+id/launch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
