--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,6 +14,7 @@
         <attr name="errorColor" format="color|reference"/>
 
         <attr name="hasDivider" format="boolean"/>
+        <attr name="hasArrow" format="boolean"/>
 
         <attr name="cardImage" format="reference"/>
     </declare-styleable>
